pull events from meetup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,6 +92,7 @@
 
   <!-- Main JS (Do not remove) -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/{{ page.custom_js }}"></script>
 
   </body>
 </html>
