remove unused assets, set up gh-pages, optimize images

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
               <h3 class="section-title">Links</h3>
               <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="/about">About</a></li>
+                <li><a href="https://medium.com/code-for-canada/code-for-canada-civic-tech-c09fb15a0140">About</a></li>
                 <li><a href="https://www.meetup.com/CivicTechWR/events/past/">Events</a></li>
                 <li><a href="/projects">Projects</a></li>
                 <li><a href="/partners">Partners</a></li>
@@ -26,29 +26,27 @@
                 <li><a href="https://civictechwrslack.herokuapp.com/">Join us on Slack</a></li>
               </ul>
             </div>
+
             <div class="col-md-3">
-              <h3 class="section-title">Newsletter</h3>
-              <p>Subscribe for our newsletter</p>
-              <form class="form-inline" id="fh5co-header-subscribe">
-                <div class="row">
-                  <div class="col-md-12 col-md-offset-0">
-                    <div class="form-group">
-                      <input type="text" class="form-control" id="email" placeholder="Enter your email">
-                      <button type="submit" class="btn btn-default"><i class="icon-paper-plane"></i></button>
-                    </div>
-                  </div>
-                </div>
-              </form>
+              <h3 class="section-title">In the news</h3>
+              <ul>
+                <li><a href="https://www.cbc.ca/news/canada/kitchener-waterloo/waterloo-region-organizations-voter-information-surveys-1.4870468">CBC - Oct 20, 2018</a></li>
+                <li><a href="https://www.waterloochronicle.ca/community-story/8943235-waterlooregionvotes-org-helps-voters-inform-themselves-before-municipal-election/">Waterloo Chronicle - Oct 03, 2018</a></li>
+                <li><a href="https://www.therecord.com/news-story/8847728-techies-mobilizing-for-this-fall-s-municipal-elections-in-waterloo-region/">The Record - Aug 19, 2018</a></li>
+              </ul>
             </div>
+
           </div>
           <div class="row copy-right">
             <div class="col-md-6 col-md-offset-3 text-center">
               <p class="fh5co-social-icon">
-                <a href="https://twitter.com/civictechwr"><i class="icon-twitter2"></i></a>
-                <a href="https://www.facebook.com/CivicTechWR"><i class="icon-facebook2"></i></a>
-                <a href="https://github.com/CivicTechWR"><i class="icon-github2"></i></a>
+                <a href="https://twitter.com/civictechwr"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.facebook.com/CivicTechWR"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://github.com/CivicTechWR"><i class="fab fa-github"></i></a>
+                <a href="https://medium.com/civictechwr"><i class="fab fa-medium-m"></i></a>
+                <a href="https://www.meetup.com/CivicTechWR"><i class="fab fa-meetup"></i></a>
+                <a href="https://civictechwrslack.herokuapp.com/"><i class="fab fa-slack"></i></a>
               </p>
-              <p>Template by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a></p>
             </div>
           </div>
         </div>
