--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,14 +4,17 @@
       <div class="row">
         <div class="col-xs-6">
           <h1 class="text-left"><a class="fh5co-logo" href="/">
-            <img src="assets/images/civictechwr_logo_white.svg" alt="Civic Tech WR">
+            <img src="{{'assets/images/civictechwr_logo_white.svg' | relative_url }}" alt="Civic Tech WR">
           </a></h1>
         </div>
         <div class="col-xs-6">
           <p class="fh5co-social-icon text-right">
-            <a href="https://twitter.com/civictechwr"><i class="icon-twitter2"></i></a>
-            <a href="https://www.facebook.com/CivicTechWR"><i class="icon-facebook2"></i></a>
-            <a href="https://github.com/CivicTechWR"><i class="icon-github2"></i></a>
+            <a href="https://twitter.com/civictechwr"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/CivicTechWR"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://github.com/CivicTechWR"><i class="fab fa-github"></i></a>
+            <a href="https://medium.com/civictechwr"><i class="fab fa-medium-m"></i></a>
+            <a href="https://www.meetup.com/CivicTechWR"><i class="fab fa-meetup"></i></a>
+            <a href="https://civictechwrslack.herokuapp.com/"><i class="fab fa-slack"></i></a>
           </p>
         </div>
       </div>
