--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,15 +5,18 @@
         <h1 class="text-center"><a class="fh5co-logo" href="/">Civic Tech WR</a></h1>
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
+          <li><a href="https://medium.com/code-for-canada/code-for-canada-civic-tech-c09fb15a0140">About</a></li>
           <li><a href="https://www.meetup.com/CivicTechWR/events/past/">Events</a></li>
           <li><a href="/projects">Projects</a></li>
           <li><a href="/partners">Partners</a></li>
         </ul>
         <p class="fh5co-social-icon">
-          <a href="https://twitter.com/civictechwr"><i class="icon-twitter2"></i></a>
-          <a href="https://www.facebook.com/CivicTechWR"><i class="icon-facebook2"></i></a>
-          <a href="https://github.com/CivicTechWR"><i class="icon-github2"></i></a>
+          <a href="https://twitter.com/civictechwr"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.facebook.com/CivicTechWR"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://github.com/CivicTechWR"><i class="fab fa-github"></i></a>
+          <a href="https://medium.com/civictechwr"><i class="fab fa-medium-m"></i></a>
+          <a href="https://www.meetup.com/CivicTechWR"><i class="fab fa-meetup"></i></a>
+          <a href="https://civictechwrslack.herokuapp.com/"><i class="fab fa-slack"></i></a>
         </p>
       </div>
     </div>
