--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -108,7 +108,6 @@ body {
 	line-height: 1.8;
 	font-size: 20px;
 	background: lighten($brand-black, 94%);
-	background-image: url(images/photography.png);
 	font-weight: 300;
 	overflow-x: hidden;
 
@@ -686,7 +685,7 @@ header{
 	width: 65%;
 	margin-bottom: 5em;
 	min-height: 700px;
-	background: $brand-white url(../images/loader.gif) no-repeat center center;
+	background: $brand-white url(../images/loader.svg) no-repeat center center;
 	z-index: 1;
 	@media screen and (max-width: $screen-md){
 		width: 100%;
