add relative url to page links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,11 +10,11 @@
             <div class="col-md-3 col-md-push-1">
               <h3 class="section-title">Links</h3>
               <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="{{'/' | relative_url }}">Home</a></li>
                 <li><a href="https://medium.com/code-for-canada/code-for-canada-civic-tech-c09fb15a0140">About</a></li>
                 <li><a href="https://www.meetup.com/CivicTechWR/events/past/">Events</a></li>
-                <li><a href="/projects">Projects</a></li>
-                <li><a href="/partners">Partners</a></li>
+                <li><a href="{{'/projects' | relative_url }}">Projects</a></li>
+                <li><a href="{{'/partners' | relative_url }}">Partners</a></li>
               </ul>
             </div>
 
