--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,11 @@
     <div class="fh5co-navbar-brand">
       <div class="row">
         <div class="col-xs-6">
-          <h1 class="text-left"><a class="fh5co-logo" href="/">
-            <img src="{{'assets/images/civictechwr_logo_white.svg' | relative_url }}" alt="Civic Tech WR">
-          </a></h1>
+          <h1 class="text-left">
+            <a class="fh5co-logo" href="{{'/' | relative_url }}">
+              <img src="{{'assets/images/civictechwr_logo_white.svg' | relative_url }}" alt="Civic Tech WR">
+            </a>
+          </h1>
         </div>
         <div class="col-xs-6">
           <p class="fh5co-social-icon text-right">
