--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,13 +2,13 @@
     <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle active"><i></i></a>
     <div class="js-fullheight fh5co-table">
       <div class="fh5co-table-cell js-fullheight">
-        <h1 class="text-center"><a class="fh5co-logo" href="/">Civic Tech WR</a></h1>
+        <h1 class="text-center"><a class="fh5co-logo" href="{{'/' | relative_url }}">Civic Tech WR</a></h1>
         <ul>
-          <li><a href="/">Home</a></li>
+          <li><a href="{{'/' | relative_url }}">Home</a></li>
           <li><a href="https://medium.com/code-for-canada/code-for-canada-civic-tech-c09fb15a0140">About</a></li>
           <li><a href="https://www.meetup.com/CivicTechWR/events/past/">Events</a></li>
-          <li><a href="/projects">Projects</a></li>
-          <li><a href="/partners">Partners</a></li>
+          <li><a href="{{'/projects' | relative_url }}">Projects</a></li>
+          <li><a href="{{'/partners' | relative_url }}">Partners</a></li>
         </ul>
         <p class="fh5co-social-icon">
           <a href="https://twitter.com/civictechwr"><i class="fab fa-twitter"></i></a>
