--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,10 +11,11 @@
               <h3 class="section-title">Links</h3>
               <ul>
                 <li><a href="{{'/' | relative_url }}">Home</a></li>
-                <li><a href="https://medium.com/code-for-canada/code-for-canada-civic-tech-c09fb15a0140">About</a></li>
+                <li><a href="{{'/about' | relative_url }}">About us</a></li>
                 <li><a href="https://www.meetup.com/CivicTechWR/events/past/">Events</a></li>
                 <li><a href="{{'/projects' | relative_url }}">Projects</a></li>
                 <li><a href="{{'/partners' | relative_url }}">Partners</a></li>
+                <li><a href="{{'/get-involved' | relative_url }}">Get involved</a></li>
               </ul>
             </div>
 
