--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,10 +5,11 @@
         <h1 class="text-center"><a class="fh5co-logo" href="{{'/' | relative_url }}">Civic Tech WR</a></h1>
         <ul>
           <li><a href="{{'/' | relative_url }}">Home</a></li>
-          <li><a href="https://medium.com/code-for-canada/code-for-canada-civic-tech-c09fb15a0140">About</a></li>
+          <li><a href="{{'/about' | relative_url }}">About us</a></li>
           <li><a href="https://www.meetup.com/CivicTechWR/events/past/">Events</a></li>
           <li><a href="{{'/projects' | relative_url }}">Projects</a></li>
           <li><a href="{{'/partners' | relative_url }}">Partners</a></li>
+          <li><a href="{{'/get-involved' | relative_url }}">Get involved</a></li>
         </ul>
         <p class="fh5co-social-icon">
           <a href="https://twitter.com/civictechwr"><i class="fab fa-twitter"></i></a>
