--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
           <div class="row">
             <div class="col-md-3">
               <h3 class="section-title">Civic Tech WR</h3>
-              <p>We're a community group that brings together people from different sectors and industries to actively solve issues facing our local community using technology-based solutions.</p>
+              <p>We're a community group that brings together people from different sectors and industries to actively solve issues facing our local community using design and technology.</p>
             </div>
 
             <div class="col-md-3 col-md-push-1">
