--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -17,7 +17,7 @@
           <a href="https://github.com/CivicTechWR"><i class="fab fa-github"></i></a>
           <a href="https://medium.com/civictechwr"><i class="fab fa-medium-m"></i></a>
           <a href="https://www.meetup.com/CivicTechWR"><i class="fab fa-meetup"></i></a>
-          <a href="https://civictechwrslack.herokuapp.com/"><i class="fab fa-slack"></i></a>
+          <a href="https://civictechwr.slack.com/"><i class="fab fa-slack"></i></a>
         </p>
       </div>
     </div>
