--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
               <ul>
                 <li><a href="mailto:civictechwr@gmail.com">civictechwr@gmail.com</a></li>
                 <li><a href="https://www.meetup.com/CivicTechWR/">Join us on Meetup</a></li>
-                <li><a href="https://civictechwr.slack.com/">Join us on Slack</a></li>
+                <li><a href="{{ site.slack_invite }}">Join us on Slack</a></li>
               </ul>
             </div>
 
@@ -46,7 +46,7 @@
                 <a href="https://github.com/CivicTechWR"><i class="fab fa-github"></i></a>
                 <a href="https://medium.com/civictechwr"><i class="fab fa-medium-m"></i></a>
                 <a href="https://www.meetup.com/CivicTechWR"><i class="fab fa-meetup"></i></a>
-                <a href="https://civictechwr.slack.com/"><i class="fab fa-slack"></i></a>
+                <a href="{{ site.slack_invite }}"><i class="fab fa-slack"></i></a>
               </p>
             </div>
           </div>
